--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 services:
   - docker
-before-install:
+before_install:
   - docker build -t samsure007/docker-react -f Dockerfile.dev .
-scripts:
+script:
   - docker run samsure007/docker-react npm run test -- --coverage
